# it_has_alternatives

./: .gitignore  Dockerfile  README.md  Tools.py  docker-compose.database.yaml  docker-compose.gateway.yaml  docker-compose.service.yaml  docker-compose.yaml  export_data.py
backend_service/: .gitignore  Dockerfile  README.md  compile.sh  pyproject.toml  pyrightconfig.json
backend_service/backend_service/: configuration.py.backup  main.py
backend_service/backend_service/generated_yrpc/: it_has_alternatives_auto_everything_based_pure_python_rpc.py  it_has_alternatives_objects.py  it_has_alternatives_pure_python_rpc.py  it_has_alternatives_pure_python_rpc_client.py  it_has_alternatives_rpc.py  it_has_alternatives_yingshaoxo_database_rpc.py
configs/traefik_dynamic_configs/: traefik_dynamic_config.yaml
data_backup/: __mongodb_info__.json
data_backup/it_has_alternatives_object/: it_has_alternatives_object.json  user.json
front_end/: change_hosts_to_let_sub_domain_work.py  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
front_end/src/: App.vue  contribution_page.vue  main.ts  main_search_page.vue  one_object_page.vue  store.ts  style.css
front_end/src/assets/less/: variables.less
front_end/src/components/: a_table.vue  add_alternatives_to_an_object_component.vue  contribution_cn.vue  contribution_en.vue
front_end/src/generated_yrpc/: it_has_alternatives_objects.ts  it_has_alternatives_rpc.ts
front_end/src/locales/: en.json  sc.json
protocols/: it_has_alternatives.proto
(+12 files in other folders)
